--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -12,94 +12,89 @@
 
 <body>
 
-    <header th:insert="fragments.html :: header">Header</header>
-    <div class="container-fluid">
-        <main class="content">
-            <section class="container-lg border-bottom border-fuente text-center py-4">
-                <h2 class="text-info">MI PERFIL</h2>
-                <div class="row align-items-stretch bg-resalte m-3 p-5">
-                    <div class="d-none d-md-block col-md-5 align-items-center text-center py-4 bg-fondo">
-                        <div class="container-fluid">
-                            <img class="profile-picture" th:src="@{/images/user/}+user_+${nutritionist.id}+.png"
-                                alt="imagen perfil">
+<header th:insert="fragments.html :: header">Header</header>
+<div class="container-fluid">
+    <main class="content">
+        <section class="container-lg border-bottom border-fuente text-center py-4">
+            <h2 class="text-info">MI PERFIL</h2>
+            <div class="row align-items-stretch bg-resalte m-3 p-3">
+                <div class="d-none d-md-block col-md-5 bg-fondo">
+                    <img class="profile-picture" th:src="@{/images/user/}+user_+${nutritionist.id}+.png"
+                         alt="imagen perfil">
+                </div>
+                <div class="col-md-7 px-4 py-4 bg-fondo">
+                    <div class="container-fluid py-4 align-items-center text-left">
+                        <div class="row">
+                            <div class="col text-center">
+                                <h1 th:text="${nutritionist.username}"></h1>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-7 px-4 py-4 bg-fondo">
-                        <div class="container-fluid py-4 align-items-center text-left">
-                            <div class="row">
-                                <div class="col text-center">
-                                    <h1 th:text="${nutritionist.username}"></h1>
-                                </div>
+                        <div class="row py-1">
+                            <div class="col">
+                                <h2 class="d-inline mr-2 text-info">Nombre: </h2>
+                                <h3 class="d-inline"
+                                    th:text="|${nutritionist.name} ${nutritionist.surname1} ${nutritionist.surname2}|">
+                                </h3>
                             </div>
-                            <div class="row py-1">
-                                <div class="col">
-                                    <h2 class="d-inline mr-2 text-info">Nombre: </h2>
-                                    <h3 class="d-inline"
-                                        th:text="|${nutritionist.name} ${nutritionist.surname1} ${nutritionist.surname2}|">
-                                    </h3>
-                                </div>
+                        </div>
+                        <div class="row py-1">
+                            <div class="col">
+                                <h2 class="d-inline mr-2 text-info">Email: </h2>
+                                <h3 class="d-inline" th:text="${nutritionist.email}"></h3>
                             </div>
-                            <div class="row py-1">
-                                <div class="col">
-                                    <h2 class="d-inline mr-2 text-info">Email: </h2>
-                                    <h3 class="d-inline" th:text="${nutritionist.email}"></h3>
-                                </div>
-                            </div>
-                            <div class="row py-1">
-                                <div class="col">
-                                    <h2 class="d-inline mr-2 text-info">Fecha de nacimiento: </h2>
-                                    <h3 class="d-inline" th:text="${nutritionist.birthDate}"></h3>
-                                </div>
+                        </div>
+                        <div class="row py-1">
+                            <div class="col">
+                                <h2 class="d-inline mr-2 text-info">Fecha de nacimiento: </h2>
+                                <h3 class="d-inline" th:text="${nutritionist.birthDate}"></h3>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="container-lg border-bottom border-fuente text-center py-4">
-                <h2 class="text-info">RECETAS FAVORITAS</h2>
+            </div>
+        </section>
+        <section class="container-lg border-bottom border-fuente text-center py-4">
+            <h2 class="text-info">RECETAS FAVORITAS</h2>
 
-            </section>
-            <section class="container-lg text-center py-4">
-                <h2 class="text-info">MIS RECETAS</h2>
-                <div class="container">
-                    <div class="row">
-                        <div class="col my-3" th:each="recipe :${recipeList}">
-                            <div class="row d-lg-block d-xl-inline-block">
-                                <div class="col-12 d-block">
-                                    <img class="recipe-profile pb-3 rounded "
-                                        th:src="@{/images/recipe/} + recipe_ + ${recipe.id} + .jpeg">
-                                </div>
-                                <div class="col-12 d-block">
-                                    <a th:href="@{${'/recipes/' + recipe.id}}">
-                                        <h2 class="d-inline-block ml-2 text-uppercase" th:text="${recipe.name}"></h2>
-                                    </a>
-                                    <div class="bg-resalte p-1">
-                                        <div class=" pt-2 border border-fondo bw-5 bg-resalte ">
-                                            <h5 class="text-fondo">EDITAR</h5>
-                                        </div>
-                                    </div>
+        </section>
+        <section class="container-lg text-center py-4">
+            <h2 class="text-info">MIS RECETAS</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-xl-4 p-2" th:each="recipe :${recipeList}">
+                                <img class="recipe-profile pb-3 rounded "
+                                     th:src="@{/images/recipe/} + recipe_ + ${recipe.id} + .jpeg">
+                            <!--boton de editar receta-->
+                            <a th:href="@{${'/recipes/' + recipe.id}}">
+                                <h2 class="d-inline-block ml-2 text-uppercase" th:text="${recipe.name}"></h2>
+                            </a>
+                            <div class="bg-resalte p-1">
+                                <div class=" pt-2 border border-fondo bw-5 bg-resalte ">
+                                    <h5 class="text-fondo">EDITAR</h5>
                                 </div>
                             </div>
-                        </div>
                     </div>
-                    <div class="row justify-content-center my-3">
-                        <div class="col-8 bg-info p-1">
-                            <div class="col-12 bg-info pt-2 border border-fondo bw-5">
-                                <a href="/recipes/add">
-                                    <h2 class="text-fondo">CREAR UNA NUEVA RECETA</h2>
-                                </a>
-                            </div>
+                </div>
+                </br>
+                <!--boton para añadir nueva receta-->
+                <div class="row justify-content-center my-3">
+                    <div class="col-8 bg-info p-1">
+                        <div class="col-12 bg-info pt-2 border border-fondo bw-5">
+                            <a href="/recipes/add">
+                                <h2 class="text-fondo">CREAR UNA NUEVA RECETA</h2>
+                            </a>
                         </div>
                     </div>
                 </div>
-            </section>
-            <!-- Falta añadir el listado de recetas favoritas y recetas creadas -->
-            <br><br><br>
-        </main>
-    </div>
-    <footer th:insert="fragments.html::footer"></footer>
+            </div>
+        </section>
+        <!-- Falta añadir el listado de recetas favoritas y recetas creadas -->
+        <br><br><br>
+    </main>
+</div>
+<footer th:insert="fragments.html::footer"></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
 </body>
