--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,7 +22,7 @@
 
                         </div>
                         <div class="slogan d-none d-xl-block ">
-                            <p>Fusionando Sabor y Nutrición</p>
+                            <p th:text="#{menu.slogan}">Fusionando Sabor y Nutrición</p>
                         </div>
                     </div>
                 </div>
@@ -36,14 +36,14 @@
                             </button>
                             <div class="collapse navbar-collapse " id="navbarNavDropdown">
                                 <ul class="navbar d-xs-block">
-                                    <li class="nav-item border-top border-fuente"><a href="/home"
-                                            class="nav-link active">INICIO</a></li>
+                                    <li class="nav-item border-top border-fuente"><a th:href="@{'/home' + '?lang=' + ${#locale.language}}"
+                                            class="nav-link active" th:text="#{menu.home}">INICIO</a></li>
 
-                                    <li class="nav-item border-top border-fuente"><a href="/recipes"
-                                            class="nav-link active">RECETAS</a></li>
+                                    <li class="nav-item border-top border-fuente"><a th:href="@{'/recipes' + '?lang=' + ${#locale.language}}"
+                                            class="nav-link active" th:text="#{menu.recipes}">RECETAS</a></li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle border-top border-fuente" href="/categories"
-                                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="nav-link dropdown-toggle border-top border-fuente" th:href="@{'/categories' + '?lang=' + ${#locale.language}}"
+                                            role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="#{menu.categories}">
                                             CATEGORIAS
                                         </a>
                                         <ul class="dropdown-menu bg-fondo">
@@ -57,8 +57,8 @@
                                             <li><a class="dropdown-item" href="/categories/4/recipes">Snack</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item border-top border-fuente"><a href="/nutritionists/1"
-                                            class="nav-link active">PERFIL</a></li>
+                                    <li class="nav-item border-top border-fuente"><a th:href="@{'/nutritionists/1' + '?lang=' + ${#locale.language}}"
+                                            class="nav-link active" th:text="#{menu.profile}">PERFIL</a></li>
                                 </ul>
                             </div>
                         </div>
